--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <form action="/" method="post">
         <label for="cityID">City Name: </label>
         <input id="cityID" type="text" name="City" >
+        <label for="unitsID">Units: </label>
         <select name="Units" id="unitsID">
             <option value="metric">Metric</option>
             <option value="standard">Standard</option>
